Fixed the footerbug and the buttons on HomeSection That forced window to be larger on mobile devices

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -63,7 +63,7 @@
     align-items: flex-start;
     margin: 40px;
     text-align: left;
-    width: 160px;
+    width: calc(120px + 1vw);
     box-sizing: border-box;
   }
   
@@ -72,7 +72,10 @@
   }
   
   .footer-link-items > h2 {
+    font-size: 20px;
     color: #fff;
+    margin-bottom: 30px;
+    text-decoration: underline;
   }
   
   .footer-link-items a {
